--- a/Report/motorControlReport.tex
+++ b/Report/motorControlReport.tex
@@ -98,7 +98,7 @@
         \textbf{Team Members:}\\
         Sajid Ali\\
         Tuck Hong 01336059\\
-        Lulwa Alkhalifa \\
+        Lulwa Alkhalifa 01351905 \\
             
     \end{center}
 \end{titlepage}
@@ -184,6 +184,35 @@ After setting the new PWM period using \textbf{tone} and \textbf{tonefreqmap} in
 This task is dependent on a non-empty \textbf{tonesQ}. This dependency is released by \textbf{TerminalListenerThread} when a melody command is received from the user. 
 
 \subsection{Decoding Messages}
+
+\noindent The system receives commands from a host over a serial interface at 9600bps and follows the given syntax specifications:
+
+ \begin{itemize}
+	\item Each command ends with a carriage return character.
+	\item The syntax for rotation commands is the regular expression R-?\textbackslash{}d\{1,4\}(\textbackslash{}.\textbackslash{}d)?
+	\item The syntax for maximum speed commands is the regular expression V\textbackslash d \{1,3\}(\textbackslash{}.\textbackslash{}d)?
+	\item The syntax for setting the bitcoin key is the regular expression K[0-9a-fA-F]\{16\}
+	\item Matching bitcoin nonces should be sent to the host with a message matching the regular expression N[0-9a-fA-F]\{16\}
+	\item The syntax for melody commands is the regular expression T([A-G][\#\textasciicircum{}]?[1-8])\{1,16\} (where \# and \textasciicircum{}are characters)
+	
+\end{itemize}
+
+An interrupt service routine \textbf{serialISR} receives each incoming byte from the serial port and places it into a queue. This is done by using the method \textbf{uint8\_t RawSerial::getc()} to retrieve a byte from the serial port and the method \textbf{Mail::put()} to put a \textbf{Mail} message in a \textbf{mail\_box} queue.
+\bigskip
+
+Decoding messages is implemented in \textbf{TerminaListenerThread} as a normal priority thread. \textbf{serialISR} is attached to serial port events, and in an infinite loop the method \textbf{Mail::get()} is used to wait for new characters. Upon receiving a return carriage character from mail, the command message is passed to functions that try to match it with the expected syntax. The command message is then placed in another \textbf{mail\_box} to be communicated to the host via serial.
+
+\bigskip
+\lstinputlisting[language=C++]{decode1.cpp}   
+\bigskip       
+
+The method used detemine if the command message is valid varies for the different commands.The standard C++ regular expressions library is used to decode speed and position commands. The function \textbf{sscanf} is used to decode the new key command, and melody commands are decoded by iterating through the message string as shown below.
+
+\bigskip
+\lstinputlisting[language=C++]{decode2.cpp}  
+\bigskip
+If the message received from the serial port matches any of the expected commands, then the relevant changes are made to implement the command and a \textbf{Mail} message to confirm receiving a command is put into a \textbf{mail\_box} and communicated to the host via serial. More information about this can be found in the next section.
+
 
 \subsection{Outputting Messages}
 
